fix(theme): uniform spacing

--- a/src/assets/blog.css
+++ b/src/assets/blog.css
@@ -200,8 +200,19 @@ pre {
 	}
 }
 
+/* =================================== divider ==================================== */
+
 hr {
+	margin-top: 2.5rem;
+	margin-bottom: 2rem;
 	border: thin solid var(--grey);
+}
+
+/* ================================= collapsable ================================== */
+
+summary {
+	margin-top: 10px;
+	cursor: pointer;
 }
 
 /* ================================== post list =================================== */
